06/task2/deployment-https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-https
  namespace: netology
  labels:
    app: web-https
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-https
  template:
    metadata:
      labels:
        app: web-https
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web-content
              mountPath: /usr/share/nginx/html
      volumes:
        - name: web-content
          configMap:
            name: web-content
