06/task2/service-https.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-https-svc
  namespace: netology
spec:
  selector:
    app: web-https
  ports:
    - name: http
      port: 80
      targetPort: 80
